Fixed light and dark mode

--- a/nba/static/nba/dark.css
+++ b/nba/static/nba/dark.css
@@ -21,22 +21,3 @@ p, span, small{
 .title{
 	color:aqua
 }
-
-#profile_pic{
-	display: block;
-	border-radius: 50%;
-	margin: 10px auto;
-	width: 200px;
-	border: 2px solid rgb(24, 26, 31);
-
-}
-
-hr{
-	margin: 20px;
-	background-color: #eaeaea;
-}
-
-.control_is-expanded{
-	background-color: black;
-	color: white;
-}
