--- a/nba/static/nba/light.css
+++ b/nba/static/nba/light.css
@@ -13,17 +13,3 @@ p, span, small{
 #box{
 	background-color: #F8F8F8!important;
 }
-
-#profile_pic{
-	display: block;
-	border-radius: 50%;
-	margin: 10px auto;
-	width: 200px;
-	border: 2px solid #e7e7e7;
-
-}
-
-hr{
-	margin: 20px;
-	background-color: #eaeaea;
-}
